Fixed text alignment on health poster

--- a/css/health_style.css
+++ b/css/health_style.css
@@ -38,7 +38,7 @@
     stroke-width: 0.6px;
 }
 
-#q9 .men text, #q10 .men text {
+#q7 .men text, #q8 .men text, #q9 .men text, #q10 .men text {
     text-anchor: end;
 }
 
